--- a/css/confirm.css
+++ b/css/confirm.css
@@ -14,6 +14,42 @@
     text-decoration: none;
 }
 
+.button008 a {
+    background: #eee;
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 10px 10px;
+    max-width: 240px;
+    padding: 10px 25px;
+    color: #62e2dc;
+    transition: 0.3s ease-in-out;
+    font-weight: 500;
+    z-index: 0;
+}
+
+.button008 a:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 0;
+    display: block;
+    background: #6bb6ff;
+    transition: .3s;
+    left: 0;
+}
+
+.button008 a:hover {
+    color: #FFF;
+}
+
+.button008 a:hover:before {
+    width: 100%;
+    z-index: -1;
+}
+
 #wrapper .back_btn:link,
 #wrapper .back_btn:hover,
 #wrapper .back_btn:visited,
